[package]
name = "draw-rs"
version = "0.1.0"
authors = ["Charles Neau <charles63500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = { git = "https://github.com/gotham-rs/gotham" }
futures = "0.3"
tokio-tungstenite = "0.10"
tokio = "0.2"
pretty_env_logger = "0.4"
sha1 = "0.6"
base64 = "0.12"

# rayon = "1.3.1"
# typed-arena = "2.0.1"
